--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,20 @@
+server.port = 8080 
+#security.basic.enabled=false
+management.security.enabled=false
+management.endpoints.web.exposure.include=*
+management.endpoint.shutdown.enabled=true
+spring.jackson.serialization.indent_output=true
+management.endpoints.web.cors.allowed-origins=*
+# Allow requests from localhost:8081
+cors.allowed.origins=http://localhost:8081
+
+
 #spring.datasource.url=jdbc:mysql://localhost/parking
 #spring.datasource.username=root
 #spring.datasource.password=qwerty
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #
 
-#spring.datasource.url = jdbc:sqlite:parking.db
-#spring.datasource.driver-class-name = org.sqlite.JDBC
-#spring.datasource.username =
-#spring.datasource.password =
 #
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect = com.parking.config.SQLiteDialect
